--- a/aragog_cli/src/cli.yaml
+++ b/aragog_cli/src/cli.yaml
@@ -78,7 +78,7 @@ subcommands:
       takes_value: false
   - truncate_database:
       takes_value: false
-      about: Truncates the database, removes all collections and documents. Does not remove Named Graphs.
+      about: Truncates the database, removes all collections, graphs, indexes and documents.
   - describe:
       takes_value: false
       about: Describes the current database state, the synced schema version, collections, document couts, etc.
