--- a/docs/aragog-docs/package.json
+++ b/docs/aragog-docs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
+    "@qonfucius/nuxt-opengraph-meta": "^1.0.2",
     "core-js": "^3.9.1",
     "highlight.js": "^11.0.1",
     "marked": "^2.1.1",
