--- a/docs/aragog-docs/pages/legal-notices.i18n.yml
+++ b/docs/aragog-docs/pages/legal-notices.i18n.yml
@@ -1,10 +1,11 @@
 en:
   legal-notices:
-    title: Legal notices
-    description: Legal notices
+    title: Legal notices about our ArangoDB ODM & OGM library
+    description: Legal notices in accordance with the provisions of articles 6-III and 19 of the french law for Confidence in the Digital Economy.
     blocs:
       title: Legal notices
       subtitle: In accordance with the provisions of articles 6-III and 19 of the law for Confidence in the Digital Economy, we inform you that
+      aragog-library-license: The Aragog library is published under the MIT license.
       qonfucius:
         0: "This website is edited, produced and hosted by :"
         1: "Qonfucius, SASU with a capital of €14,000"
