--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -21,7 +21,12 @@ doc = false
 [dependencies]
 # Aragog
 aragog = { path = "..", version = "0.13", features = ["blocking", "minimal_traits"], default-features = false }
-arangors = { version = "0.4.8", features = ["blocking", "reqwest_blocking", "rocksdb"], default-features = false }
+
+arangors = { version = "0.5", features = ["blocking", "reqwest_blocking", "rocksdb"], default-features = false }
+# TODO: remove this when arangors fixes https://github.com/fMeow/arangors/issues/79
+typed-builder = "=0.9.0"
+# Required until re-exported from arangors crate, latest version (0.2.3) is not compatible
+uclient = { version = "0.1.3", features = ["blocking_reqwest"]}
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -36,7 +41,7 @@ log = "0.4"
 chrono = "0.4"
 
 # Command-line args
-clap = { version = "3.0.0-beta", features = ["yaml"] }
+clap = { version = "=3.0.0-beta.2", features = ["yaml"] }
 
 # error
 thiserror = "1.0"
