--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ documentation = "https://docs.rs/aragog"
 [features]
 default = ["derive", "async"]
 async = ["arangors/reqwest_async", "uclient/async_reqwest"]
-blocking = ["arangors/blocking", "arangors/reqwest_blocking", "maybe-async/is_sync", "aragog-macros/blocking", "uclient/blocking_reqwest"]
+async_rustls = ["async", "arangors/reqwest_async_rustls", "uclient/async_reqwest_rustls"]
+blocking = ["arangors/reqwest_blocking", "maybe-async/is_sync", "aragog-macros/blocking", "uclient/blocking_reqwest"]
+blocking_rustls = ["blocking", "arangors/reqwest_blocking_rustls", "uclient/blocking_reqwest_rustls"]
 entreprise = ["arangors/enterprise"]
 derive = ["aragog-macros"]
 minimal_traits = []
