--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://gitlab.com/qonfucius/aragog"
 documentation = "https://docs.rs/aragog"
+homepage = "https://aragog.rs"
 
 [features]
 default = ["derive", "async"]
