--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -12,6 +12,7 @@ exclude= ["example"]
 categories = ["web-programming", "database"]
 repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_cli"
 readme = "README.md"
+homepage = "https://aragog.rs"
 
 [[bin]]
 name = "aragog"
