--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 license = "MIT"
 description = "Macros for Aragog Crate"
 repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_macros"
+homepage = "https://aragog.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
