--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,23 +17,14 @@ documentation = "https://docs.rs/aragog"
 homepage = "https://aragog.rs"
 
 [features]
-default = ["derive", "async"]
-async = ["arangors/reqwest_async", "uclient/async_reqwest"]
-async_rustls = ["async", "arangors/reqwest_async_rustls", "uclient/async_reqwest_rustls"]
-blocking = ["arangors/reqwest_blocking", "maybe-async/is_sync", "aragog-macros/blocking", "uclient/blocking_reqwest"]
-blocking_rustls = ["blocking", "arangors/reqwest_blocking_rustls", "uclient/blocking_reqwest_rustls"]
-entreprise = ["arangors/enterprise"]
+default = ["derive", "arangors_lite/openssl"]
+rustls = ["arangors_lite/rustls"]
+blocking = ["arangors_lite/blocking", "maybe-async/is_sync", "aragog-macros/blocking"]
+entreprise = ["arangors_lite/enterprise"]
 derive = ["aragog-macros"]
 minimal_traits = []
 
 [dependencies]
-# ArangoDB driver
-arangors = { version = "0.5", default-features = false, features = ["rocksdb"] }
-# TODO: remove this when arangors fixes https://github.com/fMeow/arangors/issues/79
-typed-builder = "=0.9.0"
-# Required until re-exported from arangors crate, latest version (0.2.3) is not compatible
-uclient = "0.1.3"
-
 # Used for string validation toolbox, not used otherwise
 regex = "1.5"
 
@@ -61,9 +52,14 @@ maybe-async = "0.2"
 # The aragog derive macros
 aragog-macros = { path = "aragog_macros", version = "0.7.2", optional = true }
 
+# ArangoDB driver
+[dependencies.arangors_lite]
+version = "0.1"
+features = ["rocksdb"]
+default-features = false
+
 [dev-dependencies]
 # We add the "feature" option to avoid serde version conflict somehow
-# TODO: remove this dependency
 chrono = { version = "0.4", features = ["serde"] }
 # Used by examples:
 env_logger = "0.9"
