--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -41,8 +41,8 @@ thiserror = "1.0"
 exitcode = "1.1"
 
 # CLI lib
-clap = "3.0.0-beta"
-clap_generate = "3.0.0-beta"
+clap = "3.0.0-beta.5"
+clap_generate = "3.0.0-beta.5"
 
 [dependencies.aragog]
 path = ".."
