--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,10 +98,10 @@ test:features:
     - cargo test --features "minimal_traits" --tests -- --test-threads=1
 
 test:rustls-features:
-  image: rust:latest
+  image: rust:alpine
   <<: *test_template
   script:
-    - cargo test --features "rustls" --no-default-features --tests -- --test-threads=1
+    - apk add --no-cache clang musl-dev
     - cargo test --features "rustls derive" --no-default-features --tests -- --test-threads=1
     - cargo test --features "blocking rustls derive" --no-default-features --tests -- --test-threads=1
 
