--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -5,11 +5,12 @@ authors = [
     "Felix de Maneville: <felix.maneville@gmail.com>",
     "Qonfucius team <felix.maneville@qonfucius.team>"
 ]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 description = "Macros for Aragog Crate"
 repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_macros"
 homepage = "https://aragog.rs"
+rust-version = "1.56.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
