--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aragog_cli"
-version = "0.4.0"
+version = "0.5.0"
 authors = [
     "Felix de Maneville: <felix.maneville@gmail.com>",
     "Qonfucius team <felix.maneville@qonfucius.team>"
@@ -42,12 +42,15 @@ thiserror = "1.0"
 exitcode = "1.1"
 
 # CLI lib
-clap = "3.0.0-beta.5"
-clap_generate = "3.0.0-beta.5"
+clap_generate = "3.0.0-rc"
+
+[dependencies.clap]
+version = "3.0.0-rc"
+features = ["derive"]
 
 [dependencies.aragog]
 path = ".."
-version = "0.15"
+version = "0.16"
 features = ["blocking", "rustls", "minimal_traits"]
 default-features = false
 
