- Clippy improvements - Refactoring - Deprecation of some methods

--- a/aragog_macros/Cargo.toml
+++ b/aragog_macros/Cargo.toml
@@ -8,6 +8,8 @@ authors = [
 edition = "2021"
 license = "MIT"
 description = "Macros for Aragog Crate"
+keywords = ["ArangoDB", "Arango"]
+categories = ["database"]
 repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_macros"
 homepage = "https://aragog.rs"
 rust-version = "1.56.0"
