--- a/aragog_cli/Cargo.toml
+++ b/aragog_cli/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 description = "CLI for Aragog Crate"
 exclude= ["example"]
 categories = ["web-programming", "database"]
+keywords = ["ArangoDB", "Arango", "CLI", "Schema", "Migrations"]
 repository = "https://gitlab.com/qonfucius/aragog/-/tree/master/aragog_cli"
 readme = "README.md"
 homepage = "https://aragog.rs"
@@ -42,10 +43,10 @@ thiserror = "1.0"
 exitcode = "1.1"
 
 # CLI lib
-clap_complete = "3.0"
+clap_complete = "3.1"
 
 [dependencies.clap]
-version = "3.0"
+version = "3.1"
 features = ["derive"]
 
 [dependencies.aragog]
