--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,3 +77,15 @@ status = "actively-developed"
 members = [
     "aragog_cli"
 ]
+
+[[example]]
+name = "boxed_example"
+
+[[example]]
+name = "graph_example"
+
+[[example]]
+name = "simple_example"
+
+[[example]]
+name = "transaction_example"
