ci: Add a CUSTOM_DOMAIN to be used when variable is not defined

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,8 @@ build::mdbook:
 build::website:
   image: node:lts
   stage: build_doc
+  variables:
+    CUSTOM_DOMAIN: http://localhost
   script:
       - cd docs/aragog-docs
       - npm ci
